--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -1,19 +1,24 @@
-$drp_menu_bg_color: #baf7fd;
-$drp_menu_color: #7b4412;
+$lang_menu_item_bg_color: #9febf3;
+$lang_menu_item_color: #7b4412;
+$lang_link_color: #e2ec9d;
 
 div.container.c-cont div.jumbotron-cnina div.lang div.dropdown-menu{
 	min-width: 0;
 }
 
 div.container.c-cont div.jumbotron-cnina div.lang a{
-	color: #e2ec9d;;
+  color: $lang_link_color;
 }
+div.container.c-cont div.jumbotron-cnina div.lang a:hover{
+  color: darken($lang_link_color, 20%);
+}
+
 div.container.c-cont div.jumbotron-cnina div.lang div.dropdown-menu{
-	background-color: $drp_menu_bg_color;
+	background-color: $lang_menu_item_bg_color;
 }
 div.container.c-cont div.jumbotron-cnina div.lang a.dropdown-item{
-  color: $drp_menu_color;
+  color: $lang_menu_item_color;
 }
 div.container.c-cont div.jumbotron-cnina div.lang a.dropdown-item:hover{
-  background-color: darken($drp_menu_bg_color, 20%);
+  background-color: invert($lang_menu_item_bg_color, 15%);
 }
